[package]
name = "ya-misc"
version = "0.1.0"
description = "Other stuff info"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-client = "0.5"
ya-compile-time-utils = "0.2"
ya-core-model = { version = "^0.4", features = ["misc"] }
ya-persistence = "0.2"
ya-service-api = "0.1"
ya-service-api-interfaces = "0.1"
ya-service-bus = "0.4"
ya-metrics = "0.1"

actix-web = "3.2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["chrono", "sqlite", "r2d2"] }
diesel_migrations = "1.4"
log = "0.4"
metrics = "0.12"
self_update = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.21"
thiserror = "^1.0"
tokio = { version = "0.2", features = ["time", "sync"] }
