[package]
name = "ya-core-model"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[features]
default = []
full = [
    'activity',
    'appkey',
    'driver',
    'identity',
    'market',
    'net',
    'payment',
    'gftp',
    'sgx'
]
activity = []
appkey = []
driver = ['bigdecimal', 'bitflags']
gftp = []
identity = []
market = []
net = []
payment = ['bigdecimal']
sgx = ['sgx-types']

[dependencies]
ya-client-model = "0.1"
ya-service-bus = "0.2"
bigdecimal = { version = "0.1.0", optional = true }
bitflags = { version = "1.2", optional = true }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_bytes = "0.11.3"
thiserror = "1.0.9"
sgx-types = { git = "https://github.com/golemfactory/sgx-types.git", rev = "157af8487d538062155d98712fee61a6d69c8ced", features = ['with-serde'], optional = true }
