[package]
name = "ya-core-model"
version = "0.10.1"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
homepage = "https://github.com/golemfactory/yagna"
repository = "https://github.com/golemfactory/yagna"
license = "LGPL-3.0"
description = "Yagna protocol messages"
keywords = ["golem", "yagna"]

[features]
default = []
full = [
    'activity',
    'appkey',
    'driver',
    'identity',
    'market',
    'net',
    'payment',
    'gftp',
    'sgx',
    'version',
]
activity = []
appkey = []
driver = ['bigdecimal', 'bitflags']
gftp = []
identity = []
market = ['bigdecimal']
net = []
payment = ['bigdecimal', 'bitflags', 'anyhow', 'serde_json_canonicalizer', 'sha3']
sgx = ['graphene-sgx']
version = []

[dependencies]
ya-client-model.workspace = true
ya-service-bus = { workspace = true }

anyhow = { version = "1.0", optional = true }
bigdecimal = { version = "0.4", features = ["serde"], optional = true }
bitflags = { version = "1.2", optional = true }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { workspace = true }
graphene-sgx = { version = "0.3.3", optional = true }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.3"
serde_json_canonicalizer = { version = "0.2.0", optional = true }
serde_json = "1.0.113"
sha3 = { version = "0.9", optional = true }
structopt = "0.3"
strum = { workspace = true }
strum_macros = "0.24"
thiserror = "1.0.9"

