[package]
name = "net-iroh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt.workspace = true
anyhow = "1.0.93"
bincode = "1.3.3"
futures = "0.3.31"
iroh-net = {  version = "0.28.1", features = ['discovery-local-network', "iroh-relay"] }
rustyline = "14.0.0"
serde = { version = "1.0.214", features = ["derive"] }
ya-core-model = { workspace = true, features = ["net", "identity"] }
bytes = { version = "1" }
ethsign = { version = "0.8" }
url.workspace = true


[lints]
workspace = true
