[package]
name = "ya-net"
version = "0.3.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[features]
default = []
service = []
# Temporary to make goth integration tests work
hybrid-net = []

[dependencies]
ya-client-model = "0.5"
ya-core-model = { version = "^0.8", features=["net", "identity"] }

# ya-relay-client = "0.2"
ya-relay-client = { git = "https://github.com/golemfactory/ya-relay.git", rev = "802ed2ec052a9ce92ec69c06963194ef81a2ea13" }
#ya-relay-client = { path = "../../../ya-relay/client" }

ya-sb-proto = { version = "0.6" }
ya-service-api = "0.1"
ya-service-api-interfaces = "0.2"
ya-service-bus = "0.6"
ya-utils-networking = "0.2"

actix = "0.13"
actix-web = "4"
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
humantime = "2.1"
lazy_static = "1.4"
log = "0.4"
metrics="0.12"
serde_json = "1.0"
structopt = "0.3"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["time"] }
tokio-stream = "0.1.8"

bytes = { version = "1" }
ethsign = { version = "0.8" }
tokio-util = { version = "0.7" }
url = { version = "2.2" }
prost = { version = "0.10" }
rand = { version = "0.7"}

[dev-dependencies]
ya-sb-proto = "0.6"
ya-sb-router = "0.6"

env_logger = "0.7"
serde = "1.0"
structopt = "0.3"
test-case = "2"
