[package]
name = "ya-net"
version = "0.3.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[features]
default = []
service = []
# Temporary to make goth integration tests work
central-net = []
packet-trace-enable = [
    "ya-packet-trace/enable",
    "ya-relay-client/packet-trace-enable",
]

[dependencies]
ya-client-model.workspace = true
ya-core-model = { workspace = true, features = ["net", "identity"] }

ya-relay-client = { workspace = true }

ya-sb-proto = { workspace = true }
ya-sb-util = { workspace = true }
ya-service-api.workspace = true
ya-service-api-interfaces.workspace = true
ya-service-bus = { workspace = true, features = ["tls"] }
ya-utils-networking = { workspace = true, features = ["dns"] }
ya-packet-trace = { git = "https://github.com/golemfactory/ya-packet-trace" }

actix.workspace = true
actix-web.workspace = true
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
humantime = "2.1"
lazy_static = "1.4"
log = "0.4"
metrics = "0.12"
serde_json = "1.0"
structopt = "0.3"
strum = { workspace = true }
thiserror = "1.0"
tokio = { version = "1", features = ["time"] }
tokio-stream = "0.1.8"

bytes = { version = "1" }
ethsign = { version = "0.8" }
tokio-util = { version = "0.7" }
url = { version = "2.2" }
prost = { version = "0.10" }
rand = { version = "0.7" }
regex = { workspace = true }

[dev-dependencies]
ya-sb-proto = { workspace = true }
ya-sb-router = { workspace = true }

env_logger = "0.7"
serde = "1.0"
structopt = "0.3"
test-case = "2"

[lints]
workspace = true
