[package]
name = "ya-payment-driver"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-persistence = "0.2"
diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"]}
ethereum-types = "0.6.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1.0"
web3 = { git = "https://github.com/bidzyyys/rust-web3" }
futures = "0.3"
ethereum-tx-sign = { git = "https://github.com/bidzyyys/ethereum-tx-sign" }
ethsign = "0.7"
reqwest = { version = "0.10", features = ["blocking", "json"] }
ethkey = "0.3.1"
hex = "0.4"
r2d2 = "0.8"
secp256k1 = "0.15"
tokio = { version = "0.2", features = ["macros"] }
