[package]
name = "ya-payment-driver"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
ya-persistence = "0.2"
diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
ethereum-types = "0.6.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1.0"
web3 = { git = "https://github.com/bidzyyys/rust-web3" }
futures3 = { version = "0.3", features = ["compat"], package = "futures" }
ethereum-tx-sign = { git = "https://github.com/bidzyyys/ethereum-tx-sign" }
reqwest = { version = "0.10", features = ["json"] }
ethkey = "0.3.1"
hex = "0.4"
r2d2 = "0.8"
secp256k1 = "0.15"
tokio = { version = "0.2", features = ["macros"] }
actix-rt = "1.0"
bitflags = "1.2"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4.8"
bigdecimal = "0.1.0"
num-bigint = "0.2"
uint = "0.7"
env_logger = "0.7.1"
dotenv = "0.15.0"
