[package]
name = "ya-payment-driver"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bigdecimal = "0.1.0"
bitflags = "1.2"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
env_logger = "0.7.1"
ethereum-tx-sign = { git = "https://github.com/bidzyyys/ethereum-tx-sign" }
ethereum-types = "0.6.0"
ethkey = "0.3.1"
futures3 = { version = "0.3", features = ["compat"], package = "futures" }
hex = "0.4"
lazy_static = "1.4.0"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
log = "0.4.8"
num-bigint = "0.2"
r2d2 = "0.8"
secp256k1 = "0.15"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros"] }
uint = "0.7"
ureq = { version = "0.11.0", features = ["charset"] }
uuid = { version = "0.8", features = ["v4"] }
web3 = { git = "https://github.com/bidzyyys/rust-web3" }
ya-persistence = "0.2"
