[package]
name = "ya-payment"
version = "0.3.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[features]
default = []

[dependencies]
ya-agreement-utils = { version = "0.5.0" }
ya-client-model = { workspace=true, features = ["with-diesel"] }
ya-core-model = { version = "^0.9", features = [ "activity", "driver", "identity", "market", "payment" ] }
ya-net = "0.3"
ya-metrics = "0.2"
ya-persistence = "0.3"
ya-service-api = "0.1"
ya-service-api-interfaces = "0.2"
ya-service-api-web = "0.2"
ya-service-bus = "0.6.1"

actix-web = "4"
anyhow = "1.0"
base64 = "0.12"
bigdecimal = "0.2"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = [ "sqlite", "r2d2", "chrono", "bigdecimal" ] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
env_logger = "0.7"
futures = "0.3"
hex = "0.4"
metrics="0.12"
lazy_static = "1.4"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
log = "0.4"
num-bigint = "0.3"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1", features = ["fs", "signal", "macros"] }
uint = "0.7"
uuid = { version = "0.8", features = ["v4"] }
humantime="2.0.1"

[dev-dependencies]
ya-client = "0.7"
ya-dummy-driver = "0.3"
ya-erc20-driver = "0.4"
ya-zksync-driver = "0.3"
ya-net = { version = "0.3", features = ["service"] }
ya-sb-router = "0.6.1"

actix-rt = "2.7"
rand = "0.8"
ethsign = "0.8"
