[package]
name = "ya-payment"
version = "0.3.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[features]
default = []
framework-test = []

[dependencies]
ya-agreement-utils = { workspace = true }
ya-client-model = { version = "0.6", features = ["with-diesel"] }
ya-core-model = { version = "^0.9", features = [
    "activity",
    "driver",
    "identity",
    "market",
    "payment",
] }
ya-net = "0.3"
ya-metrics = "0.2"
ya-persistence = "0.3"
ya-service-api = "0.1"
ya-service-api-interfaces = "0.2"
ya-service-api-web = "0.2"
ya-service-bus = { workspace = true }
ya-std-utils = "0.1"

actix-web = "4"
anyhow = "1.0"
base64 = "0.12"
bigdecimal = "0.2"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.12"
derive_more = "0.99.18"
diesel = { version = "1.4", features = [
    "sqlite",
    "r2d2",
    "chrono",
    "bigdecimal",
] }
diesel_migrations = "1.4"
dotenv = "0.15.0"
env_logger = "0.7"
erc20_payment_lib = { workspace = true }
futures = "0.3"
hex = { workspace = true }
humantime = "2.0.1"
http = "1.1.0"
lazy_static = "1.4"
libsqlite3-sys = { workspace = true }
log = "0.4"
metrics = "0.12"
num-bigint = "0.3"
open = "5.1.2"
problem_details = "0.6.0"
r2d2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
strum = { workspace = true }
thiserror = "1.0"
tokio = { version = "1", features = ["fs", "signal", "macros"] }
tracing = { version = "0.1.40", features = ["log"] }
uint = "0.7"
uuid = { version = "0.8", features = ["v4"] }

[dev-dependencies]
ya-client = "0.8"
ya-dummy-driver = "0.3"
ya-erc20-driver = "0.4"
ya-net = { version = "0.3", features = ["service"] }
ya-identity = "0.3"
ya-market = "0.4"
ya-sb-router = { workspace = true }
ya-framework-basic = { version = "0.1" }
ya-framework-mocks = { version = "0.1" }

actix-rt = "2.7"
rand = "0.8"
ethsign = "0.8"
serial_test = { git = "https://github.com/tworec/serial_test.git", branch = "actix_rt_test", features = ["actix-rt2"] }
test-context = "0.1.4"
url = "2.5"

[lints]
workspace = true
