[package]
name = "ya-persistence"
version = "0.2.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"


[dependencies]
ya-client-model = { version = "0.3", features = [ "with-diesel" ] }
ya-core-model = { version = "^0.3"}

anyhow = "1.0.26"
bigdecimal = "0.2"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15.0"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
log = "0.4.8"
r2d2 = "0.8"
serde_json = "1.0"
thiserror = "1.0.9"
tokio = { version = "1.6", features = [] }
