[package]
name = "ya-persistence"
version = "0.3.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[features]
default = []
service = ["ya-service-api", "ya-service-api-interfaces", "ya-utils-process", "structopt"]

[dependencies]
ya-client-model = { version = "0.5", features = [ "with-diesel" ] }
ya-core-model = { version = "0.9" }
ya-service-api = { version = "0.1", optional = true }
ya-service-api-interfaces = { version = "0.2", optional = true }
ya-utils-process = { version = "0.2", features = ["lock"], optional = true }

anyhow = "1.0.26"
bigdecimal = "0.2"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4", features = ["sqlite", "r2d2", "chrono"] }
dotenv = "0.15.0"
libsqlite3-sys = { version = "*", features = ["bundled"] }
log = "0.4"
r2d2 = "0.8"
serde_json = "1.0"
structopt = { version = "0.3", optional = true }
thiserror = "1.0.9"
tokio = { version = "1", features = [] }

[dev-dependencies]
tempdir = "0.3.7"
test-case = "2"
tokio = { version = "1", features = ["macros", "rt"] }
