[package]
name = "ya-core-sci"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
web3 = {git = "https://github.com/bidzyyys/rust-web3"}
ethereum-tx-sign = "3.0.0"
ethereum-types = "0.6.0"
serde_json = "1.0"
ethsign = {git = "https://github.com/bidzyyys/ethsign"}
hex = "0.4.0"