[package]
name = "ya-service-api-derive"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
lazy_static = "1.4"
syn = { version = "1.0", features = ["full"] }
strum = "0.17"
strum_macros = "0.17"

[dev-dependencies]
actix-service = "1.0"
actix-web = "2.0"
anyhow = "1.0"
clap = "2.33"
log = "0.4"
structopt = "0.3"
ya-service-api-interfaces = "0.1"

