[package]
name = "ya-service-api"
version = "0.1.1"
description = "Interface for modules of Yagna service and CLI"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
log = "0.4"
prettytable-rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
ya-utils-cli = "0.1"
url = "2.1.1"
