[package]
name = "ya-service-api"
version = "0.1.1"
description = "Interface for modules of Yagna service and CLI"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
url = "2.1.1"

ya-utils-cli = "0.1"
ya-core-model = "0.9"
