[package]
name = "yagna"
version = "0.2.4"
description = "Yagna server daemon and CLI"
authors = ["Golem Factory <contact@golem.network>"]
homepage = "https://github.com/golemfactory/yagna/core/serv"
repository = "https://github.com/golemfactory/yagna"
license = "GPL-3.0"
edition = "2018"

[dependencies]
ya-activity = "0.2"
ya-payment = "0.1"
ya-identity = "0.2"
ya-market = "0.1"

ya-core-model = "0.1"
ya-persistence = "0.2"
ya-sb-router = "0.1"
ya-service-api = "0.1"
ya-service-api-derive = "0.1"
ya-service-api-interfaces = "0.1"
ya-service-api-web = "0.1"
ya-service-bus = "0.2"

actix-rt = "1.0"
actix-service = "1.0"
actix-web = "2.0"
anyhow = "1.0"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
lazy_static = "1.4"
structopt = "0.3"
dotenv = "0.15.0"
url="2.1.1"
ya-net = {version = "0.1", features=["service"]}

[package.metadata.deb]
assets = [
    ["target/release/yagna", "usr/bin/", "755"],
    ["target/release/ya-requestor", "usr/bin/", "755"],
    ["target/release/ya-provider", "usr/bin/", "755"],
    ["target/release/wasmtime-exeunit", "usr/bin/", "755"],
]

